Create job to update transaction stats at due_on date

--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,24 @@ SESSION_LIFETIME=120
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
+BROADCAST_DRIVER=redis
+CACHE_DRIVER=redis
+FILESYSTEM_DRIVER=local
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
+SESSION_LIFETIME=120
+QUEUE_DRIVER=redis
+
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+REDIS_CLIENT=predis
+REDIS_CLUSTER=redis
+REDIS_PREFIX=
+REDIS_URL=
+REDIS_DB=0
+REDIS_CACHE_DB=2
+REDIS_QUEUE=queue
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
